misc margin updates from styles to class

--- a/templates/accounts/confirm-account.html
+++ b/templates/accounts/confirm-account.html
@@ -1,7 +1,7 @@
 {% extends 'register-base.html' %} {% block title %} Confirmation Step {% endblock %}{% load static %} {% block card %}
     
 <div class="flex-this column w-90">
-    <div class="margin-bottom-1">
+    <div class="mb-1p">
         {% if community %}
             <h2>Confirmation step</h2>
             <p>
