--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -2,7 +2,7 @@
 
 {% block sidebar %}
 <div id="content-related">
-    <div class="module" style="background:white; margin-bottom: 0px;">
+    <div class="module mb-0" style="background:white;">
         <h2><a href="/admin/dashboard">Dashboard</a></h2>
     </div>
     <div class="module" id="recent-actions-module">
