--- a/templates/projects/project-status.html
+++ b/templates/projects/project-status.html
@@ -6,7 +6,7 @@
 
             <div class="flex-this">
                 <h3 class="mt-0 mb-0">Project Status</h3>
-                <div class="tooltip" style="margin-top: 6px; margin-left: 5px;"><strong>i</strong>
+                <div class="tooltip ml-5" style="margin-top: 6px;"><strong>i</strong>
                     <span class="tooltiptext">
                         This project has been sent to your community because this account wants to know whether or not your community would like to apply Labels to this project. <br><br>
                         You can message them below. When your community has made a decision your community can do that by clicking the options in the drop down below.
@@ -30,7 +30,7 @@
 
                         <div>
                             <span>Project Status</span>
-                            <div class="tooltip" style="margin-top: 6px; margin-left: 5px;"><strong>i</strong>
+                            <div class="tooltip ml-5" style="margin-top: 6px;"><strong>i</strong>
                                 <span class="tooltiptext">
                                     <i class="bold">Acknowledge Notice</i> <br> You have seen the Project but have not made a decision about applying Labels.<br>
                                     <i class="bold">Labels Pending</i> <br>  You are deciding which Label(s) to apply to the Project.<br>
