--- a/localcontexts/static/css/main.css
+++ b/localcontexts/static/css/main.css
@@ -228,28 +228,65 @@ input:focus {
 .right-text { text-align: right; }
 .italic { font-style: italic; }
 
-/* MARGIN & PADDING */
-.margin-top-1 { margin-top: 1%; }
-.margin-right-1 { margin-right: 1%; }
-.margin-right-2 { margin-right: 2%;}
-.margin-left-1 { margin-left: 1%; }
-.margin-top-2 { margin-top: 2%; }
-.margin-bottom-2 { margin-bottom: 2%; }
-.auto-margin { margin: auto; }
-.no-top-margin { margin-top: 0; }
-.no-bottom-margin { margin-bottom: 0; }
-.no-margin { margin: 0 !important; }
-.no-right-margin {margin-right: 0 !important;}
-.margin-top-8 { margin-top: 8px; }
-.margin-top-10 { margin-top: 10px; }
-.margin-bottom-8 { margin-bottom: 8px; }
-.margin-left-8 { margin-left: 8px; }
-.margin-right-8 { margin-right: 8px; }
-.margin-left-16 { margin-left: 16px; }
-.margin-left-55 { margin-left: 55%; }
-.margin-right-16 { margin-right: 16px; }
-.margin-top-16 { margin-top: 16px; }
-.margin-bottom-16 { margin-bottom: 16px; }
+
+/* MARGIN */
+.m-auto { margin: auto; }
+.m-0 { margin: 0 !important; }
+.m-1p { margin: 1%; }
+.m-2p { margin: 2%; }
+.m-55p { margin: 55%; }
+.m-5 { margin: 5px; }
+.m-8 { margin: 8px; }
+.m-10 { margin: 10px; }
+.m-15 { margin: 15px; }
+.m-16 { margin: 16px; }
+
+.mt-auto { margin-top: auto; }
+.mt-0 { margin-top: 0; }
+.mt-1p { margin-top: 1%; }
+.mt-2p { margin-top: 2%; }
+.mt-55p { margin-top: 55%; }
+.mt-5 { margin-top: 5px; }
+.mt-8 { margin-top: 8px; }
+.mt-10 { margin-top: 10px; }
+.mt-15 { margin-top: 15px; }
+.mt-16 { margin-top: 16px; }
+
+.mb-auto { margin-bottom: auto; }
+.mb-0 { margin-bottom: 0; }
+.mb-1p { margin-bottom: 1%; }
+.mb-2p { margin-bottom: 2%; }
+.mb-55p { margin-bottom: 55%; }
+.mb-5 { margin-bottom: 5px; }
+.mb-8 { margin-bottom: 8px; }
+.mb-10 { margin-bottom: 10px; }
+.mb-15 { margin-bottom: 15px; }
+.mb-16 { margin-bottom: 16px; }
+
+.mr-auto { margin-right: auto; }
+.mr-0 { margin-right: 0 !important; }
+.mr-1p { margin-right: 1%; }
+.mr-2p { margin-right: 2%; }
+.mr-55p { margin-right: 55%; }
+.mr-5 { margin-right: 5px; }
+.mr-8 { margin-right: 8px; }
+.mr-10 { margin-right: 10px; }
+.mr-15 { margin-right: 15px; }
+.mr-16 { margin-right: 16px; }
+
+.ml-auto { margin-left: auto; }
+.ml-0 { margin-left: 0; }
+.ml-1p { margin-left: 1%; }
+.ml-2p { margin-left: 2%; }
+.ml-55p { margin-left: 55%; }
+.ml-5 { margin-left: 5px; }
+.ml-8 { margin-left: 8px; }
+.ml-10 { margin-left: 10px; }
+.ml-15 { margin-left: 15px; }
+.ml-16 { margin-left: 16px; }
+
+
+/* PADDING */
 .no-top-pad { padding-top: 0; }
 .no-bottom-pad { padding-bottom: 0px; }
 .pad-top-1 { padding-top: 1%; }
