--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -15,7 +15,7 @@
             {% csrf_token %}
             <div>
                 <label>Username</label>
-                <div class="tooltip" style="margin-top: 15px; margin-left: 5px;"><strong>i</strong>
+                <div class="tooltip mt-15 ml-5"><strong>i</strong>
                     <span class="tooltiptext">Log-in with the username you created during the registration process, not your email</span>
                 </div>
                 <input type="username" name="username" required>
