--- a/templates/researchers/connect-researcher.html
+++ b/templates/researchers/connect-researcher.html
@@ -3,7 +3,7 @@
     <script src="{% static 'javascript/orcid-widget.js' %}" type="text/javascript" defer></script>
 
     <div class="flex-this column w-90">
-        <div class="margin-bottom-1 flex-this space-between">
+        <div class="mb-1p flex-this space-between">
             <h2>Researcher Account</h2>  
             <div class="mt-16">Or <a class="default-a" href="{% url 'select-account' %}">choose another account</a></div>
         </div>
