feat: updated right padding to add more space

--- a/templates/partials/_alerts.html
+++ b/templates/partials/_alerts.html
@@ -34,7 +34,7 @@
         }
         .toast-message {
             height: 40px;
-
+            padding-right: 8px;
             margin-top: -12px;
             margin-right: 38px;
             border-right: solid 1px;
