feat: modified toast so the opacity is always 1

--- a/templates/partials/_alerts.html
+++ b/templates/partials/_alerts.html
@@ -1,6 +1,9 @@
 {% load static %}
 {% if messages %}
     <style>
+        #toast-container > .toast {
+            opacity: 1
+        }
         #toast-container > .toast:before {
             position: relative;
             font-size: 24px;
