--- a/templates/researchers/projects.html
+++ b/templates/researchers/projects.html
@@ -1,5 +1,5 @@
 {% extends 'account-base.html' %} {% block title %} Projects {% endblock %}{% load static %}{% load custom_researcher_tags %}{% block researcher_content %}
-<div class="dashcard-alerts">
+<div class="{% if messages %}dashcard-alerts{% else %}hide{% endif %}">
     {% include 'partials/_alerts.html' %}
 </div>
 {% researcher_contributing_projects researcher as researcher_projects_contrib %}
