--- a/templates/snippets/emails/internal/subscription-failed-info.html
+++ b/templates/snippets/emails/internal/subscription-failed-info.html
@@ -1,7 +1,11 @@
 {% autoescape off %}
 <h3>
     {{ data.first_name}} {% if data.first_name != data.last_name %} {{ data.last_name }} {% endif %}
-    has tried to apply for a subscription for an {% if data.account_type == 'institution_account' %} Institution account. {% elif data.account_type == 'researcher_account' %} Researcher account. {% endif %}
+    has tried to apply for a subscription for an 
+    {% if data.account_type == 'institution_account' %} Institution account.
+    {% elif data.account_type == 'researcher_account' %} Researcher account.
+    {% elif data.account_type == 'service_provider_account' %} Service Provider account.
+    {% endif %}
 </h3>
 
 <h4>
