feat: while editing a community, nld derived-boundaries use the description's url

--- a/templates/boundary/update-boundary-via-native-land-and-shapefile.html
+++ b/templates/boundary/update-boundary-via-native-land-and-shapefile.html
@@ -342,7 +342,7 @@
 
             // set Boundary with payload
             BoundaryPayLoad = {
-                source: url,
+                source: boundary.properties.description,
                 name: boundary.properties.Name,
                 boundary: boundaryCoordinates
             }
