--- a/templates/communities/update-boundary-via-native-land-and-shapefile.html
+++ b/templates/communities/update-boundary-via-native-land-and-shapefile.html
@@ -321,7 +321,7 @@
 
             // set Boundary with payload
             BoundaryPayLoad = {
-                source: url,
+                source: boundary.properties.description,
                 name: boundary.properties.Name,
                 boundary: boundaryCoordinates
             }
