feat: template varies depending on whether the boundary is derived from a shapefile or NLD

--- a/templates/partials/_project-actions.html
+++ b/templates/partials/_project-actions.html
@@ -260,15 +260,24 @@
                     <div class="w-100">
                         <div class="flex-this w-100">
                             <p class="w-100">
-                                {% if 'native-land.ca' in project.source_of_boundary and project.name_of_boundary %}
-                                    <span class="italic" style="font-size: 20px">
-                                        <a
-                                           href="{{project.source_of_boundary}}"
-                                           class="default-a" target="_blank" rel="noopener">
-                                            {{ project.name_of_boundary }}
-                                            <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i>
-                                        </a><br><br>
-                                    </span>
+                                {% if project.name_of_boundary %}
+                                    {% if 'native-land.ca' in project.source_of_boundary %}
+                                        <span class="italic" style="font-size: 20px">
+                                            <a
+                                               href="{{project.source_of_boundary}}"
+                                               class="default-a" target="_blank" rel="noopener">
+                                                {{ project.name_of_boundary }}
+                                                <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i>
+                                            </a><br><br>
+                                        </span>
+                                    {% else %}
+                                        <span class="italic" style="font-size: 20px; font-weight: bold">
+                                            <a
+                                                target="_blank" rel="noopener">
+                                                {{ project.name_of_boundary }}
+                                            </a><br><br>
+                                        </span>
+                                    {% endif %}
                                 {% endif %}
                                 <iframe src="{% url 'project-boundary-view' project.id %}" data-testid="project-boundary-iframe"
                                 style="width: 100%; height: 450px; border: 1px solid cadetblue;">
