--- a/templates/researchers/connect-researcher.html
+++ b/templates/researchers/connect-researcher.html
@@ -55,6 +55,17 @@
                 {% endif %}            
             </div>
 
+        <div class="w-100 flex-this space-between margin-top-2">
+            <div class="w-50 margin-right-1">
+                <label class="pad-top-1-5" >First Name<span class="orange-text required-label" title="">*</span></label><br>
+                {{ user_form.first_name }}
+            </div>
+
+            <div class="w-50 margin-left-1">
+                <label>Last Name</label><br>
+                {{ user_form.last_name }}
+            </div>
+        </div>
         <div class="flex-this w-100 space-between margin-top-2">
             <div class='w-50 margin-right-1'>
                 <label for="primary_institution">Primary Institution</label>
