Made first name compulsory for settigns and create researcher page

--- a/templates/institutions/create-custom-institution.html
+++ b/templates/institutions/create-custom-institution.html
@@ -30,7 +30,7 @@
 
         <div class="w-100 flex-this mt-16">
             <div class="w-50 mr-1p">
-                <label class="pad-top-1-5" >First Name</label><br>
+                <label class="pad-top-1-5" >First Name<span class="orange-text required-label" title="">*</span></label><br>
                 {{ user_form.first_name }}
             </div>
 
