--- a/templates/partials/_notices.html
+++ b/templates/partials/_notices.html
@@ -34,8 +34,8 @@
                             <a id="addURLBtn" class="primary-btn disabled-btn" title="Add a link in order to share the Notice.">Share <i class="fa-solid fa-share-nodes"></i></a>
                         {% endif %}
                     {% else %}
-                        <a class="primary-btn disabled-btn" title="{% if institution %}{% if not institution.is_approved %}Your institution account needs to be confirmed in order to download this Notice.{% endif %}{% endif %}{% if is_sandbox %}Download of Notices is not available on the sandbox site.{% endif %}">Download Notice <i class="fa-regular fa-arrow-down-to-line"></i></a>
-                        <a class="primary-btn disabled-btn" title="{% if institution %}{% if not institution.is_approved %}Your institution account needs to be confirmed in order to share this Notice.{% endif %}{% endif %}{% if is_sandbox %}Sharing of Notices is not available on the sandbox site.{% endif %}">Share <i class="fa-solid fa-share-nodes"></i></a>
+                        <a class="primary-btn disabled-btn" title="{% if not institution.is_approved %}{{ not_approved_download_notice }}{% endif %}{% if is_sandbox %}{{ download_notice_on_sandbox }}{% endif %}">Download Notice <i class="fa-regular fa-arrow-down-to-line"></i></a>
+                        <a class="primary-btn disabled-btn" title="{% if not institution.is_approved %}{{ not_approved_shared_notice }}{% endif %}{% if is_sandbox %}{{ share_notice_on_sandbox }}{% endif %}">Share <i class="fa-solid fa-share-nodes"></i></a>
                     {% endif %}
                 </div>
             </div>
@@ -239,13 +239,11 @@
                         <div class="btn-with-helptext">
                             <button class="primary-btn disabled-btn">Download Notices</button>
                             <span class="btn-help-text">
-                                {% if institution %}
-                                    {% if not institution.is_approved %}
-                                        Your institution account needs to be confirmed in order to download this Notice.
-                                    {% endif %}
+                                {% if not institution.is_approved %}
+                                    {{ not_approved_download_notice }}
                                 {% endif %}
                                 {% if is_sandbox %}
-                                    Download of Notices is not available on the sandbox site.
+                                   {{ download_notice_on_sandbox }}
                                 {% endif %}
                             </span>
                         </div>
