adjust dashcards containers

--- a/templates/partials/infocards/_community-card.html
+++ b/templates/partials/infocards/_community-card.html
@@ -1,27 +1,29 @@
 {% load static %}
 <div class="dashcard">
 
-    <div class="flex-this">
+    <div class="flex-this space-between">
 
-        <div class="dashcard-img-container">
-            <img loading="lazy" 
-                class="profile-img" 
-                src="{% if community.image %} {{ community.image.url }} {% else %} {% static 'images/placeholders/community-place.jpg' %}{% endif %}" 
-                alt="{{ community.community_name }} image"
-            >
-        </div>
-        <div class="flex-this column dashcard-text-container">
-            <div><h3 class="dashcard-h3 darkteal-text">{{ community }}</h3></div>
-            <div>
-                <p class="dashcard-subheader">
-                    Community | Members: {% if community.get_member_count < 10 %}0{{ community.get_member_count }}{% else %}{{ community.get_member_count }}{% endif %} | 
-                    Location: {{ community.get_location }}
-                </p>
+        <div class="flex-this">
+            <div class="dashcard-img-container">
+                <img loading="lazy" 
+                    class="profile-img" 
+                    src="{% if community.image %} {{ community.image.url }} {% else %} {% static 'images/placeholders/community-place.jpg' %}{% endif %}" 
+                    alt="{{ community.community_name }} image"
+                >
             </div>
-            <div><p class="dashcard-description description-sm">
-                    {% if community.description %}{{ community.description }}{% else %} No description provided. {% endif %}
-            </p></div>
-        </div>           
+            <div class="flex-this column dashcard-text-container">
+                <div><h3 class="dashcard-h3 darkteal-text">{{ community }}</h3></div>
+                <div>
+                    <p class="dashcard-subheader">
+                        Community | Members: {% if community.get_member_count < 10 %}0{{ community.get_member_count }}{% else %}{{ community.get_member_count }}{% endif %} | 
+                        Location: {{ community.get_location }}
+                    </p>
+                </div>
+                <div><p class="dashcard-description description-sm">
+                        {% if community.description %}{{ community.description }}{% else %} No description provided. {% endif %}
+                </p></div>
+            </div>  
+        </div>
 
         <div class="dashcard-btn-container">
             <div class="flex-this gap-half">
@@ -34,8 +36,9 @@
                     </div> 
                 {% endif %}
 
-                <div>                 
-                    {% if '/dashboard/' in request.path %}
+                {% if '/dashboard/' in request.path %}
+                    <div>                 
+
                         {% if approved_label %}
                             {% if request.user in community.get_collaborator or request.user == community.community_creator %}
                                 <a class="primary-btn action-btn" href="{% url 'community-projects' community.id %}">View account</a>
@@ -43,13 +46,8 @@
                         {% else %}
                             <a class="primary-btn action-btn" href="{% url 'select-label' community.id %}">View account</a>
                         {% endif %} 
-                    {% endif %}
-                    
-                    {% if request.user in  community.get_viewers and approved_label %}
-                        <a class="primary-btn action-btn" href="{% url 'select-label' community.id %}">View account</a>
-                    {% endif %}
-                </div>
-                {% if '/dashboard/' in request.path %}
+                    </div>
+
                     <div class="ml-8 flex-this gap-half">
                         <!-- Notification -->
                         {% include 'snippets/notifications.html' with scope=community %}
@@ -63,6 +61,7 @@
                         {% endif %}                        
                     </div>
                 {% endif %}
+
             </div>
         </div>
     </div>
