feat: under the map it should say "This Project boundary originates from an uploaded shapefile"

--- a/templates/partials/_project-actions.html
+++ b/templates/partials/_project-actions.html
@@ -283,6 +283,11 @@
                                         </a>.
                                     </span>
                                     <br><br>
+                                {% else %}
+                                    <span class="italic">
+                                        Project boundary originates from an uploaded shapefile
+                                    </span>
+                                    <br><br>
                                 {% endif %}
                             </p>
                         </div>
