feat: capitalize "Project" for the text under the map

--- a/templates/partials/_project-actions.html
+++ b/templates/partials/_project-actions.html
@@ -275,7 +275,7 @@
                                 </iframe>
                                 {% if 'native-land.ca' in project.source_of_boundary %}
                                     <span class="italic">
-                                        This project boundary originates from the
+                                        Project boundary originates from the
                                         <a href="https://native-land.ca/contact"
                                            class="default-a" target="_blank" rel="noopener">
                                             Native Land Digital database
