--- a/templates/partials/_update-account-main-area.html
+++ b/templates/partials/_update-account-main-area.html
@@ -75,6 +75,7 @@
         {% if update_form.description.errors %}
             <div class="msg-red w-80"><small>{{ update_form.description.errors.as_text }}</small></div>
         {% endif %}
+        <small id="charCount" class="block text-align-right">200/200</small>
     </div>
 
     <!-- Community entity -->
