--- a/templates/partials/_notices.html
+++ b/templates/partials/_notices.html
@@ -46,8 +46,8 @@
                             <a id="addURLBtn" class="primary-btn disabled-btn" title="Add a link in order to share the Notice.">Share <i class="fa-solid fa-share-nodes"></i></a>
                         {% endif %}
                     {% else %}
-                        <a class="primary-btn disabled-btn" title="{% if institution %}{% if not institution.is_subscribed %}{{ not_approved_download_notice }}{% endif %}{% endif %}{% if is_sandbox %}{{ download_notice_on_sandbox }}{% endif %}">Download Notice <i class="fa-regular fa-arrow-down-to-line"></i></a>
-                        <a class="primary-btn disabled-btn" title="{% if institution %}{% if not institution.is_subscribed %}{{ not_approved_shared_notice }}{% endif %}{% endif %}{% if is_sandbox %}{{ share_notice_on_sandbox }}{% endif %}">Share <i class="fa-solid fa-share-nodes"></i></a>
+                        <a class="primary-btn disabled-btn" title="{% if not_approved_download_notice %}{{ not_approved_download_notice }}{% endif %}{% if is_sandbox %}{{ download_notice_on_sandbox }}{% endif %}">Download Notice <i class="fa-regular fa-arrow-down-to-line"></i></a>
+                        <a class="primary-btn disabled-btn" title="{% if not_approved_shared_notice %}{{ not_approved_shared_notice }}{% endif %}{% if is_sandbox %}{{ share_notice_on_sandbox }}{% endif %}">Share <i class="fa-solid fa-share-nodes"></i></a>
                     {% endif %}
                 </div>
             </div>
